src/test/deca/context/invalid/object/methodDefinitionOtherSignature.deca
class A
{
  float b(int a){}
}

class B extends A
{
  float b(){}
}
